--- a/src/App.css
+++ b/src/App.css
@@ -1,61 +1,8 @@
 
-body {
-  font-family: Arial, sans-serif;
+* {
   margin: 0;
   padding: 0;
-  background-color: #f4f4f4;
-}
-
-header {
-  background-color: #333;
-  color: white;
-  padding: 10px 0;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 0 20px;
-}
-
-.logo {
-  font-size: 24px;
-  font-weight: bold;
-}
-
-nav ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  display: flex;
-}
-
-nav ul li {
-  margin-right: 20px;
-}
-
-nav ul li a {
-  color: white;
-  text-decoration: none;
-  font-weight: bold;
-}
-
-nav ul li a:hover {
-  text-decoration: underline;
-}
-
-footer {
-  background-color: #333;
-  color: white;
-  text-align: center;
-  padding: 15px 0;
-  position: absolute;
-  margin-bottom: 0%;
-  margin-top: 0%;
-  /* bottom: 0; */
-  width: 100%;
-}
-
-h2 {
-  color: #333;
+  box-sizing: border-box;
 }
 
 .btn {
@@ -72,8 +19,6 @@ h2 {
   background-color: #e64a19;
 }
 
-
-
 section {
   padding: 40px 20px;
 }
@@ -82,24 +27,12 @@ section {
   display: flex;
   flex-direction: column;
   align-items: center;
-}
-
-#features {
-  display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    gap: 45px;
-    
+  justify-items: center;
 }
 
 .feature img {
   width: 100%;
   border-radius: 10px;
-}
-
-.feature {
-  text-align: center;
-  max-width: 200px;
 }
 
 .hero-content {
@@ -115,65 +48,4 @@ section {
 .hero-content p {
   font-size: 18px;
   color: #fff;
-}
-
-.form-container {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.form-wrapper {
-  background-color: rgb(206, 218, 232);
-  padding: 30px;
-  border-radius: 10px;
-  width: 300px;
-  position: relative;
-}
-
-.form-group {
-  margin-bottom: 15px;
-}
-
-.form-group label {
-  display: block;
-  margin-bottom: 5px;
-}
-
-.form-group input, .form-group textarea {
-  width: 100%;
-  padding: 8px;
-  box-sizing: border-box;
-}
-
-button[type="submit"] {
-  background-color: #f56a79;
-  color: white;
-  border: none;
-  padding: 10px;
-  border-radius: 5px;
-  cursor: pointer;
-}
-
-button[type="submit"]:hover {
-  background-color: #f03a4f;
-}
-
-button[type="button"] {
-  background-color: #ccc;
-  color: #333;
-  border: none;
-  padding: 10px;
-  border-radius: 5px;
-  cursor: pointer;
-}
-
-button[type="button"]:hover {
-  background-color: #aaa;
 }
